--- a/index.html
+++ b/index.html
@@ -30,6 +30,83 @@
         </div>
     </header>
 
+    <main>
+        <section class="section1">
+            <h1>Découvrez toutes nos actualités</h1>
+        </section>
+        <section class="section2">
+            <div>
+                <article>
+                    <img src="img/Bibliothèque.png" alt="Bibliothèque">
+                    <h2>Voyage dans l’Art Moderne</h2>
+                    <p class="date">décembre 8, 2023 / No comment</p>
+                    <p class="info">L’Art Moderne, avec ses éclats de créativité et sa diversité stylistique, offre un périple captivant à travers les expressions contemporaines.…</p>
+                    <a href="/">Read more</a>
+                </article>
+                <article>
+                    <img src="img/Ville.png" alt="Ville">
+                    <h2>Delectus non nesciunt sunt</h2>
+                    <p class="date">décembre 7, 2023 / No comment</p>
+                    <p class="info">Error illum. Libero voluptatem.</p>
+                    <a href="/">Read more</a>
+                </article>
+                <article>
+                    <img src="img/Vache.png" alt="Vache">
+                    <h2>Labore deleniti fugiat beatae nesciunt</h2>
+                    <p class="date">décembre 7, 2023 / No comment</p>
+                    <p class="info">Repellat magnam et et soluta voluptatum. Dolores excepturi rerum asperiores in aut id Nostrum ab vel consequuntur aut magnam est.…</p>
+                    <a href="/">Read more</a>
+                </article>
+            </div>
+            <div>
+                <article>
+                    <img src="img/famille.png" alt="Famille">
+                    <h2>Excepturi quo vitae quia esse</h2>
+                    <p class="date">décembre 7, 2023 / No comment</p>
+                    <p class="info">Vel et.</p>
+                    <a href="/">Read more</a>
+                </article>
+                <article>
+                    <img src="img/randonnée.png" alt="Randonnée">
+                    <h2>Et qui et aut facilis non sequi est</h2>
+                    <p class="date">décembre 7, 2023 / No comment</p>
+                    <p class="info">Et voluptas qui.</p>
+                    <a href="/">Read more</a>
+                </article>
+                <article>
+                    <img src="img/singe.png" alt="singe">
+                    <h2>Harum rem eligendi et aut hic</h2>
+                    <p class="date">décembre 7, 2023 / No comment</p>
+                    <p class="info">Corrupti neque laudantium.</p>
+                    <a href="/">Read more</a>
+                </article>
+            </div>
+            <div>
+                <article>
+                    <img src="img/chant.png" alt="Chant">
+                    <h2>Repellendus et consequatur nam</h2>
+                    <p class="date">décembre 7, 2023 / No Comments</p>
+                    <p class="info">Debitis et eum cumque. Aut unde et et.</p>
+                    <a href="/">Read more</a>
+                </article>
+                <article>
+                    <img src="img/danse.png" alt="Danse">
+                    <h2>Omnis sit libero quia</h2>
+                    <p class="date">décembre 7, 2023 / No Comments</p>
+                    <p class="info">Qui sapiente. Fugit iusto. Eaque placeat.</p>
+                    <a href="/">Read more</a>
+                </article>
+                <article>
+                    <img src="img/bateaux.png" alt="Bateaux">
+                    <h2>Consequuntur et voluptatem voluptatem</h2>
+                    <p class="date">décembre 7, 2023 / No Comments</p>
+                    <p class="info">Saepe quia nemo delectus dolorem sed Error rerum est et inventore quod enim Vitae quas omnis ut voluptas optio est…</p>
+                    <a href="/">Read more</a>
+                </article>
+            </div>
+        </section>
+    </main>
+
     <footer>
         <a href="#"><img src="img/LogoBrigitte.png" alt="Logo Brigitte"></a>
         <div class="nav">
