--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
                     <a href="/">Read more</a>
                 </article>
             </div>
+            
         </section>
+        <div id="btn">
+            <a href="/" id="afficher">Afficher plus</a>
+        </div>
+        
     </main>
 
     <footer>
